2008-05-24  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mono_method_check_inlining): Avoid creating vtables if possible.
	
	* mini.c (SIG_HANDLER_SIGNATURE): Fix sparc build too.

	* mini.c (SIG_HANDLER_SIGNATURE): Fix IA64 build.

	* mini.c (mono_jit_compile_method_inner): Avoid a crash if mono_class_vtable ()
	fails.

2008-05-23  Zoltan Varga  <vargaz@gmail.com>

	* driver.c (mono_main): Set mono_setup_vtable_in_class_init to FALSE.

	* mini.c: Handle the case when mono_class_vtable () fails.

2008-05-23  Massimiliano Mantione  <massi@ximian.com>
	* mini.c (sigprof_signal_handler): Support call chains (backtrace) in
	the stat profiler.

2008-05-22  Mark Probst  <mark.probst@gmail.com>

	* mini.c, jit-icalls.c, jit-icalls.h: Make generic sharing work
	together with domain sharing.

2008-05-22  Mark Probst  <mark.probst@gmail.com>

	* mini.c: Treat callvirts to final methods like non-virtual calls
	when doing generic sharing, i.e. look them up in the runtime
	generic context.

2008-05-22  Mark Probst  <mark.probst@gmail.com>

	* inssel.brg, mini-ops.h: Added opcodes for mkrefany and refanyval
	with computed types (for generic sharing).

	* mini.c: Generic sharing for mkrefany and refanyval.

2008-05-22  Zoltan Varga  <vargaz@gmail.com>

	* inssel.brg (mini_emit_virtual_call): Avoid constructing a generic vtable if
	possible.

	* mini-trampolines.c (mono_magic_trampoline): Avoid calling setup_methods () in
	the generic sharing code.
	
	* mini-trampolines.c (mono_magic_trampoline): Call mono_class_setup_methods ()
	when needed.

2008-05-21  Zoltan Varga  <vargaz@gmail.com>

	* mini.h: Remove the declaration of mono_aot_init_vtable ().

2008-05-21  C.J. Adams-collier <cjac@colliertech.org>

	* driver.c: updated copyright date

2008-05-21  Zoltan Varga  <vargaz@gmail.com>

	* aot-runtime.c mini.c: Remove the AOT init_vtable stuff as it is no longer
	needed.

2008-05-19  Martin Baulig  <martin@ximian.com>
